--- a/index.html
+++ b/index.html
@@ -452,32 +452,27 @@
             }
         });
 
-        // Función openModal actualizada
-        // function openModal(projectData) {
-        //     document.getElementById('modal-title').textContent = projectData.title;
-        //     document.getElementById('modal-description').textContent = projectData.description;
-        //     document.getElementById('modal-image').src = projectData.image;
-        //     document.getElementById('modal-link').href = projectData.link;
-
-        //     // Actualizar tags
-        //     const tagsContainer = document.getElementById('modal-tags');
-        //     tagsContainer.innerHTML = ''; // Limpiar tags anteriores
-
-        //     projectData.tags.forEach(tag => {
-        //         const tagElement = document.createElement('span');
-        //         tagElement.className = 'tech-tag';
-        //         tagElement.textContent = tag;
-        //         tagsContainer.appendChild(tagElement);
-        //     });
-
-        //     document.getElementById('project-modal').style.display = 'flex';
-        //     document.body.style.overflow = 'hidden';
-        // }
+        // cerrar modal clickeando fuera
+        document.getElementById('project-modal').addEventListener('click', function (e) {
+            if (e.target === this) { // Solo si clickeas el fondo oscuro
+                closeModal();
+            }
+        });
 
         // Función closeModal
         function closeModal() {
-            document.getElementById('project-modal').style.display = 'none';
-            document.body.style.overflow = '';
+            const modal = document.getElementById('project-modal');
+            const dialog = modal.querySelector('.project-modal-dialog');
+
+            // Iniciar animación de cierre
+            dialog.style.scale = '0';
+
+            // Esperar 300ms (duración de tu transition)
+            setTimeout(() => {
+                modal.style.display = 'none';
+                document.body.style.overflow = '';
+                dialog.style.scale = '1'; // Resetear para próxima apertura
+            }, 300);
         }
 
         let currentSlide = 0;
@@ -565,6 +560,7 @@
 
             updateSlideImage();
         }
+
     </script>
     <!--modal estructura y funcion FIN-->
 
