fix apertura del modal
se tuvo que cambiar la función ya que empieza con display flex, por lo tanto ocasionaba un problema

--- a/index.html
+++ b/index.html
@@ -459,6 +459,51 @@
             }
         });
 
+        //Apertura del modal
+        function openModal(projectData) {
+            document.getElementById('modal-title').textContent = projectData.title;
+            document.getElementById('modal-description').textContent = projectData.description;
+            document.getElementById('modal-link').href = projectData.link;
+
+            const images = Array.isArray(projectData.image) ? projectData.image : [projectData.image];
+            const sliderContainer = document.getElementById('modal-image-slider');
+
+            sliderContainer.innerHTML = '';
+
+            images.forEach((imgSrc, index) => {
+                const img = document.createElement('img');
+                img.src = imgSrc;
+                img.alt = `${projectData.title} - Imagen ${index + 1}`;
+                img.className = 'modal-image';
+                sliderContainer.appendChild(img);
+            });
+
+            const tagsContainer = document.getElementById('modal-tags');
+            tagsContainer.innerHTML = '';
+            projectData.tags.forEach(tag => {
+                const tagElement = document.createElement('span');
+                tagElement.className = 'tech-tag';
+                tagElement.textContent = tag;
+                tagsContainer.appendChild(tagElement);
+            });
+
+            // CAMBIO AQUÍ: Primero mostrar con scale 0
+            const modal = document.getElementById('project-modal');
+            const dialog = modal.querySelector('.project-modal-dialog');
+
+            dialog.style.scale = '0';  // Empezar en 0
+            modal.style.display = 'flex';
+            document.body.style.overflow = 'hidden';
+
+            // Forzar reflow para que el navegador aplique el scale: 0
+            dialog.offsetHeight;
+
+            // Ahora sí aplicar la animación
+            requestAnimationFrame(() => {
+                dialog.style.scale = '1';
+            });
+        }
+
         // Función closeModal
         function closeModal() {
             const modal = document.getElementById('project-modal');
@@ -474,42 +519,6 @@
                 dialog.style.scale = '1'; // Resetear para próxima apertura
             }, 300);
         }
-
-        function openModal(projectData) {
-            document.getElementById('modal-title').textContent = projectData.title;
-            document.getElementById('modal-description').textContent = projectData.description;
-            document.getElementById('modal-link').href = projectData.link;
-
-            // Manejar imágenes - CARGAR TODAS
-            const images = Array.isArray(projectData.image) ? projectData.image : [projectData.image];
-            const sliderContainer = document.getElementById('modal-image-slider');
-
-            // Limpiar imágenes anteriores
-            sliderContainer.innerHTML = '';
-
-            // Crear un <img> por cada imagen
-            images.forEach((imgSrc, index) => {
-                const img = document.createElement('img');
-                img.src = imgSrc;
-                img.alt = `${projectData.title} - Imagen ${index + 1}`;
-                img.className = 'modal-image';
-                sliderContainer.appendChild(img);
-            });
-
-            // Actualizar tags (tu código existente)
-            const tagsContainer = document.getElementById('modal-tags');
-            tagsContainer.innerHTML = '';
-            projectData.tags.forEach(tag => {
-                const tagElement = document.createElement('span');
-                tagElement.className = 'tech-tag';
-                tagElement.textContent = tag;
-                tagsContainer.appendChild(tagElement);
-            });
-
-            document.getElementById('project-modal').style.display = 'flex';
-            document.body.style.overflow = 'hidden';
-        }
-
     </script>
     <!--modal estructura y funcion FIN-->
 
