loop infinito con ayuda de la IA
+Se intento recrear un loop infinito haciendo uso de la IA
-falta retocar y perfeccionar estilos
+quizás también modularizar y mantener limpio el html

--- a/index.html
+++ b/index.html
@@ -193,49 +193,104 @@
                         <li class="fade-in-left">Comunicación con clientes y colegas</li>
                     </ul>
                 </div>
+            </div>
 
-                <!-- Tools (icon) -->
-                <div class="tools-grid">
+            <div class="tools-section">
+                <h2>Herramientas & Tecnologías</h2>
 
-                    <div class="tool-item">
-                        <img src="https://img.icons8.com/?size=100&id=zfHRZ6i1Wg0U&format=png&color=000000" width="40"
-                            alt="Figma">
-                        <span>Figma</span>
+                <!-- Loop simple -->
+                <div class="tools-loop">
+                    <div class="loop-track" id="loop-track">
+                        <!-- Los items se duplicarán automáticamente con JS -->
+                        <div class="tool-item">
+                            <img src="https://img.icons8.com/color/96/html-5--v1.png" alt="HTML5">
+                            <span>HTML5</span>
+                        </div>
+                        <div class="tool-item">
+                            <img src="https://img.icons8.com/color/96/css3.png" alt="CSS3">
+                            <span>CSS3</span>
+                        </div>
+                        <div class="tool-item">
+                            <img src="https://img.icons8.com/color/96/javascript--v1.png" alt="JavaScript">
+                            <span>JavaScript</span>
+                        </div>
+                        <div class="tool-item">
+                            <img src="https://img.icons8.com/color/96/sass.png" alt="Sass">
+                            <span>Sass</span>
+                        </div>
+                        <div class="tool-item">
+                            <img src="https://img.icons8.com/color/96/figma--v1.png" alt="Figma">
+                            <span>Figma</span>
+                        </div>
+                        <div class="tool-item">
+                            <img src="https://img.icons8.com/color/96/git.png" alt="Git">
+                            <span>Git</span>
+                        </div>
+                        <div class="tool-item">
+                            <img src="https://img.icons8.com/color/96/visual-studio-code-2019.png" alt="VS Code">
+                            <span>VS Code</span>
+                        </div>
+                        <div class="tool-item">
+                            <img src="https://img.icons8.com/color/96/canva.png" alt="Canva">
+                            <span>Canva</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Loop con múltiples filas (opcional) -->
+                <div class="multi-row-loop">
+                    <div class="loop-row">
+                        <div class="loop-track" id="loop-track-2">
+                            <div class="tool-item">
+                                <img src="https://img.icons8.com/color/96/react-native.png" alt="React">
+                                <span>React</span>
+                            </div>
+                            <div class="tool-item">
+                                <img src="https://img.icons8.com/color/96/nodejs.png" alt="Node.js">
+                                <span>Node.js</span>
+                            </div>
+                            <div class="tool-item">
+                                <img src="https://img.icons8.com/color/96/python--v1.png" alt="Python">
+                                <span>Python</span>
+                            </div>
+                            <div class="tool-item">
+                                <img src="https://img.icons8.com/color/96/typescript.png" alt="TypeScript">
+                                <span>TypeScript</span>
+                            </div>
+                            <div class="tool-item">
+                                <img src="https://img.icons8.com/color/96/adobe-photoshop--v1.png" alt="Photoshop">
+                                <span>Photoshop</span>
+                            </div>
+                            <div class="tool-item">
+                                <img src="https://img.icons8.com/color/96/adobe-illustrator--v1.png" alt="Illustrator">
+                                <span>Illustrator</span>
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="tool-item">
-                        <img src="https://img.icons8.com/?size=100&id=ZZNsPaonr90b&format=png&color=0000006" width="40"
-                            alt="Framer">
-                        <span>Framer</span>
-                    </div>
-
-                    <div class="tool-item">
-                        <img src="https://cdn.simpleicons.org/sketch/F7B500" width="40" alt="Sketch">
-                        <span>Sketch</span>
-                    </div>
-
-                    <div class="tool-item">
-                        <img src="https://img.icons8.com/?size=100&id=20909&format=png&color=000000" width="40"
-                            alt="HTML 5">
-                        <span>HTML 5</span>
-                    </div>
-
-                    <div class="tool-item">
-                        <img src="https://img.icons8.com/?size=100&id=21278&format=png&color=000000" width="40"
-                            alt="CSS">
-                        <span>CSS</span>
-                    </div>
-
-                    <div class="tool-item">
-                        <img src="https://img.icons8.com/?size=100&id=78Fr72VCwbPq&format=png&color=000000" width="40"
-                            alt="Sass">
-                        <span>Sass</span>
-                    </div>
-
-                    <div class="tool-item">
-                        <img src="https://img.icons8.com/?size=100&id=me9baOv8L5z9&format=png&color=000000" width="40"
-                            alt="Canva">
-                        <span>Canva</span>
+                    <div class="loop-row">
+                        <div class="loop-track" id="loop-track-3">
+                            <div class="tool-item">
+                                <img src="https://img.icons8.com/color/96/tailwindcss.png" alt="Tailwind">
+                                <span>Tailwind</span>
+                            </div>
+                            <div class="tool-item">
+                                <img src="https://img.icons8.com/color/96/bootstrap.png" alt="Bootstrap">
+                                <span>Bootstrap</span>
+                            </div>
+                            <div class="tool-item">
+                                <img src="https://img.icons8.com/color/96/github--v1.png" alt="GitHub">
+                                <span>GitHub</span>
+                            </div>
+                            <div class="tool-item">
+                                <img src="https://img.icons8.com/color/96/docker.png" alt="Docker">
+                                <span>Docker</span>
+                            </div>
+                            <div class="tool-item">
+                                <img src="https://img.icons8.com/color/96/mongodb.png" alt="MongoDB">
+                                <span>MongoDB</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -796,6 +851,38 @@
                         particle.style.transform = 'translate(0, 0)';
                     }
                 });
+            });
+        });
+    </script>
+
+    <!--loop infinito-->
+    <script>
+        // Función para duplicar el contenido y crear loop infinito
+        function createInfiniteLoop(trackId) {
+            const track = document.getElementById(trackId);
+            const items = Array.from(track.children);
+
+            // Duplicar items
+            items.forEach(item => {
+                const clone = item.cloneNode(true);
+                track.appendChild(clone);
+            });
+        }
+
+        // Inicializar todos los loops
+        createInfiniteLoop('loop-track');
+        createInfiniteLoop('loop-track-2');
+        createInfiniteLoop('loop-track-3');
+
+        // Efecto de parallax suave con el mouse (opcional)
+        document.addEventListener('mousemove', (e) => {
+            const tracks = document.querySelectorAll('.loop-track');
+            const mouseX = e.clientX / window.innerWidth;
+
+            tracks.forEach((track, index) => {
+                const speed = (index + 1) * 20;
+                const x = (mouseX - 0.5) * speed;
+                track.style.transform = `translateX(calc(-50% + ${x}px))`;
             });
         });
     </script>
