estructura de js
idem al css pero para js
enlace correcto de los archivos js

--- a/index.html
+++ b/index.html
@@ -459,9 +459,9 @@
 
     <!-- FOOTER -->
 
-    <script src="js/data.js"></script>
-    <script src="js/modal-data.js"></script>
-    <script src="js/renderer.js"></script>
+    <script src="js/components/data.js"></script>
+    <script src="js/components/modal-data.js"></script>
+    <script src="js/components/renderer.js"></script>
 
     <!--modal estructura y funcion-->
     <div id="project-modal" class="project-modal" style="display: none">
@@ -577,7 +577,8 @@
     </script>
     <!--modal estructura y funcion FIN-->
 
-
+    <!--loop infinito-->
+    <script src="js/components/infinite-loop.js"></script>
 
     <!-- funcionalidad para barra de navegacion-->
     <script>
@@ -855,8 +856,6 @@
         });
     </script>
 
-    <!--loop infinito-->
-    <script src="js/infinite-loop.js"></script>
 </body>
 
 </html>
