--- a/index.html
+++ b/index.html
@@ -508,23 +508,7 @@
     <script src="js/components/blur-scroll.js"></script>
 
     <!--controlador del tabs en experiencia-->
-    <script>
-        const tabButtons = document.querySelectorAll(".tab-button");
-        const tabContents = document.querySelectorAll(".tab-content");
-
-        tabButtons.forEach(button => {
-            button.addEventListener("click", () => {
-                const target = button.dataset.tab;
-
-                tabButtons.forEach(btn => btn.classList.remove("active"));
-                button.classList.add("active");
-
-                tabContents.forEach(content => {
-                    content.classList.toggle("active", content.id === `tab-${target}`);
-                });
-            });
-        });
-    </script>
+    <script src="js/components/tabs-experience.js"></script>
 
     <!-- animacion suave para secciones-->
     <script>
